# src/pokemon/dto/create-pokemon.dto.ts
@@ -1,0 +1,5 @@
+export interface CreatePokemonDto {
+    name: string
+    image: string
+    liked: boolean
+}
