# src/pokemon/models/pokemon.ts
@@ -1,0 +1,6 @@
+export interface Pokemon {
+    id: number
+    name: string
+    image: string
+    liked: boolean
+}
